              algorithms, and it carries significantly less overhead.
        Class Vector:
            - New operator !=.  Also, both == and != can now compare vectors
              of different sizes (which are always considered non-equal).
            - New constructors that take iterator ranges and initialiser lists.
            - New move constructor and move assignment operator.
            - New binary +, - and scalar * operators.
            - New routine isZero().
            - New routine scaleDown() for vectors over Regina's integer classes.
            - New typedef Element.
            - New static routine unit().
            - Provides the standard str() and detail() output functions.
            - Added a non-const operator[]; the old setElement() is now
              deprecated.
            - Operators +=, -=, *= now return a reference, as they should.
            - The class Vector<Integer> is now available in python, via
              the typedef VectorInt (in a similar way to MatrixInt).
            - Deprecated class constants zero, one and minusOne; just use
              0, 1 and -1 instead.
            - Added member and global swap() functions.
            - Added begin() and end() functions to support iteration.
            - Now explicitly supports zero-length vectors.
            - Added the standard container type aliases value_type, reference,
              const_reference, iterator and const_iterator.  Element is now
              deprecated; use value_type instead.
        Class VectorInt, VectorLarge:
            - New typedefs for Vector<Integer> and Vector<LargeInteger>, for
              compatibility with MatrixInt.
        Class Vertex<3>:
            - Renamed link() to linkType().  There is no deprecated alias,
              because this rename is designed to clear the way for a
              different routine to be called link() in the future.
              Anyone who used link() before will need to update their code now.